kubernetes/photoprism/photoprism-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: photoprism
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: photoprism
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:latest
          volumeMounts:
            - name: photoprism-storage
              mountPath: /photoprism/storage
            - name: photoprism-pictures
              mountPath: /photoprism/originals
          ports:
            - containerPort: 2342
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
        - name: mariadb
          image: mariadb:10.10
          args:
            - mysqld
            - --innodb-buffer-pool-size=512M
            - --transaction-isolation=READ-COMMITTED
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --max-connections=512
            - --innodb-rollback-on-timeout=OFF
            - --innodb-lock-wait-timeout=120
          volumeMounts: 
            - name: photoprism-database
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
      volumes:
        - persistentVolumeClaim:
            claimName: photoprism-storage
          name: photoprism-storage
        - persistentVolumeClaim:
            claimName: photoprism-database
          name: photoprism-database
        - persistentVolumeClaim:
            claimName: photoprism-pictures
          name: photoprism-pictures
