kubernetes/photoprism/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  type: ClusterIP
  ports:
    - port: 2342
      name: http
  selector:
    app: photoprism
